--- a/004/style.css
+++ b/004/style.css
@@ -1,14 +1,37 @@
 @charset "utf-8";
 
-*{
-    box-sizing: border-box;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
+
+h2{
+    text-align: center;
 }
 
 table{
-    border: 1px solid red;
     width: 500px;
     padding: 1px;
+    border-collapse: collapse;
 }
 td{
-    border: 1px solid blue;
+    padding: 1px;
 }
+.tam1{
+    width: 390px;
+}
+.tam2{
+    width: 100px;
+}
+.col1{
+    width: 100px;
+}
+#cpf{
+    position: relative;
+    left: 35px;
+}
+#data{
+    position: relative;
+    left: 25px;
+}
+
