--- a/005/style.css
+++ b/005/style.css
@@ -3,9 +3,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-table{
-    padding: 2px;
-}
 h1{
     color: green;
     font-size: 20px;
@@ -14,8 +11,8 @@ address{
     font-style: normal;
     font-weight: normal;
 }
-td > label{
-    text-align: right;
+td{
+    padding: 2px;
 }
 p{
     font-weight: normal;
